fix(instance tree): correct z-index of selection  removal button

--- a/webapps/client/styles/directives/activity-instance-tree.less
+++ b/webapps/client/styles/directives/activity-instance-tree.less
@@ -124,6 +124,7 @@
     .remove {
       right: 24px;
       display: none;
+      z-index: 10;
     }
 
     &.has-children {
